tests/interpreter-anf/pass/012-min.hyg
assert(min(3, 4) = 3);
assert(min(2.3f, 1.5f) = 1.5f)