tests/interpreter-anf/fail/006-div.hyg
assert(9.0f / 3.0f = 1.0f)